[package]
name = "edgeware-executor"
version = "3.2.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trie-root = "0.16.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-io = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false}
sp-state-machine = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
sc-executor = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-core = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
sp-trie = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
frame-benchmarking = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}

edgeware-primitives = { version = "3.2.0", path = "../primitives" }
edgeware-runtime = { version = "3.2.0", path = "../runtime" }
edgeware-runtime-interface = { version = "3.2.0", path = "../runtime-interface" }

[dev-dependencies]
sp-runtime = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
frame-support = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
pallet-balances = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
pallet-transaction-payment = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
pallet-session = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
frame-system = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
pallet-timestamp = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
pallet-treasury = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
pallet-grandpa = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
pallet-indices = { git = "https://github.com/woozzzzy/substrate", branch = "bb"}
wabt = "0.10.0"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
