[package]
name = "edgeware-executor"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trie-root = "0.16.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-io = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-state-machine = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-executor = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-core = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-trie = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
frame-benchmarking = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }

edgeware-primitives = { version = "4.0.0", path = "../primitives", default-features = false }
edgeware-runtime = { version = "4.0.0", path = "../runtime", default-features = false }
edgeware-runtime-interface = { version = "4.0.0", path = "../runtime-interface", default-features = false }

[dev-dependencies]
sp-runtime = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
frame-support = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-balances = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-transaction-payment = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-session = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
frame-system = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-timestamp = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-treasury = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-grandpa = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-indices = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
wabt = "0.10.0"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
