[package]
name = "edgeware-rpc-client"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgweare rpc client library"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
hyper = "0.12.35"
jsonrpc-core-client = { version = "18.0.0", default-features = false, features = ["http"] }
log = "0.4.8"
edgeware-primitives = { path = "../primitives", default-features = false }
sp-tracing = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-rpc = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }

