[package]
name = "edgeware-rpc"
version = "3.3.6"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
pallet-contracts-rpc = { version = "4.0.0-dev" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev" }
sc-client-api = { version = "4.0.0-dev" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-keystore = { version = "4.0.0-dev" }
# sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sc-rpc = { version = "4.0.0-dev" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-api = { version = "4.0.0-dev" }
sp-block-builder = { version = "4.0.0-dev" }
sp-blockchain = { version = "4.0.0-dev" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
sp-core = { version = "4.0.0-dev" }
sp-offchain = { version = "4.0.0-dev" }
sp-runtime = { version = "4.0.0-dev" }
sp-storage = { version = "4.0.0-dev" }
sp-session = { version = "4.0.0-dev" }
sp-transaction-pool = { version = "4.0.0-dev" }
# sc-transaction-graph = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
substrate-frame-rpc-system = { version = "4.0.0-dev" }
tokio = { version = "0.2.13", features = ["macros", "sync"] }

pallet-ethereum = { git = "https://github.com/woozzzzy/frontier" }
fc-rpc = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fp-rpc = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fc-rpc-core = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fc-db = { default-features = false, git = "https://github.com/woozzzzy/frontier" }
fc-mapping-sync = { default-features = false, git = "https://github.com/woozzzzy/frontier" }

edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
edgeware-executor = { path = "../executor" }

cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt"}
moonbeam-rpc-txpool = { path = "../../client/rpc/txpool" }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
moonbeam-rpc-debug = { path = "../../client/rpc/debug" }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
moonbeam-rpc-trace = { path = "../../client/rpc/trace" }

[features]
std = []