[package]
name = "edgeware-rpc"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.16", features = ["compat"] }
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
pallet-contracts-rpc = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-transaction-payment-rpc = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
pallet-transaction-payment-rpc-runtime-api = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-client-api = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-consensus-aura = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-consensus-epochs = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-consensus-manual-seal = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sc-finality-grandpa = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-finality-grandpa-rpc = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-keystore = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-network = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-rpc-api = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-rpc = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sc-service = { git = "https://github.com/woozzzzy/substrate", branch = "bb", features = ["wasmtime"] }
sc-transaction-pool = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-api = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-block-builder = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-blockchain = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-consensus = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-consensus-aura = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-core = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-offchain = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-runtime = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-storage = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-session = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-transaction-pool = {  git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
# tokio = { version = "0.2.13", features = ["macros", "sync"] }

pallet-ethereum = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }
fc-rpc = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false, features = ["rpc_binary_search_estimate"] }
fp-rpc = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }
fc-rpc-core = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }
fc-db = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }
fc-mapping-sync = { git = "https://github.com/woozzzzy/frontier", branch = "bb", default-features = false }

edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
edgeware-executor = { path = "../executor" }

cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt"}