[package]
name = "edge-assets"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/woozzzzy/substrate/"
description = "FRAME asset management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.102", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
sp-runtime = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
frame-support = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
frame-system = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }
frame-benchmarking = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-std = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
sp-io = { git = "https://github.com/woozzzzy/substrate", branch = "bb" }
pallet-balances = { git = "https://github.com/woozzzzy/substrate", branch = "bb", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]